<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:padding="30dp"
    android:stretchColumns="*"
    android:background="#ffffff">

    <TableRow>
        <TextView
            android:id="@+id/osobaTextView"
            android:text="@string/osoba"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_span="2"
            />
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/kierunekTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="12sp"
            android:text="@string/kierunek"
            android:layout_span="2"
            />
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/uczelniaTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="15sp"
            android:text="@string/uczelnia"
            android:layout_span="2"
            />
    </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/telefonTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:textSize="12sp"
                android:text="@string/telefon"
                android:layout_span="1"
                />
            <TextView
                android:id="@+id/ulicaTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textSize="12sp"
                android:text="@string/ulica"
                android:layout_span="1"
                />


        </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textSize="12sp"
            android:text="@string/email"
            android:layout_span="1"
            />
        <TextView
            android:id="@+id/miastoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="12sp"
            android:text="@string/miasto"
            android:layout_span="1"
            />
    </TableRow>

    <TableRow>
        <ImageView
            android:src="@drawable/logouek"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_span="2"
            android:contentDescription="@string/opisObrazka" />
    </TableRow>




</TableLayout>
